# ChangeLog for virtual/perl-Digest
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Digest/ChangeLog,v 1.3 2014/11/08 15:07:38 dilfridge Exp $

*perl-Digest-1.170.0-r4 (08 Nov 2014)

  08 Nov 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  -perl-Digest-1.170.0-r3.ebuild, +perl-Digest-1.170.0-r4.ebuild:
  Remove Perl 5.16 as provider

*perl-Digest-1.170.0-r3 (22 Jul 2014)

  22 Jul 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  +perl-Digest-1.170.0-r3.ebuild, -perl-Digest-1.170.0-r1.ebuild,
  -perl-Digest-1.170.0-r2.ebuild:
  Improve dependencies

  22 Jul 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  perl-digest-base-1.170.0-r1.ebuild, perl-digest-base-1.170.0-r2.ebuild:
  Core package was renamed to Digest

  20 Jan 2014; Mike Frysinger <vapier@gentoo.org>
  perl-digest-base-1.170.0-r1.ebuild, perl-digest-base-1.170.0-r2.ebuild:
  Add arm64 love.

  17 Jan 2014; Mike Frysinger <vapier@gentoo.org>
  perl-digest-base-1.170.0-r1.ebuild:
  Mark m68k stable.

  30 Dec 2013; Mikle Kolyada <zlogene@gentoo.org>
  -perl-digest-base-1.160.0-r1.ebuild:
  Drop old

  05 Sep 2013; Patrick Lauer <patrick@gentoo.org>
  perl-digest-base-1.170.0-r2.ebuild:
  Restore keywords

*perl-digest-base-1.170.0-r2 (14 Aug 2013)

  14 Aug 2013; Patrick Lauer <patrick@gentoo.org>
  +perl-digest-base-1.170.0-r2.ebuild:
  Import from perl-experimental overlay

  02 Mar 2013; Agostino Sarubbo <ago@gentoo.org>
  perl-digest-base-1.170.0-r1.ebuild:
  Stable for sh, wrt bug #458122

  23 Feb 2013; Agostino Sarubbo <ago@gentoo.org>
  perl-digest-base-1.170.0-r1.ebuild:
  Stable for sparc, wrt bug #458122

  21 Feb 2013; Agostino Sarubbo <ago@gentoo.org>
  perl-digest-base-1.170.0-r1.ebuild:
  Stable for ia64, wrt bug #458122

  19 Feb 2013; Agostino Sarubbo <ago@gentoo.org>
  perl-digest-base-1.170.0-r1.ebuild:
  Stable for arm, wrt bug #458122

  19 Feb 2013; Agostino Sarubbo <ago@gentoo.org>