@@ -2,6 +2,6 @@ DEFINED_PHASES=-
 DESCRIPTION=Virtual for Digest
 EAPI=5
 KEYWORDS=alpha amd64 arm arm64 hppa ia64 m68k ~mips ppc ppc64 s390 sh sparc x86 ~ppc-aix ~amd64-fbsd ~x86-fbsd ~x64-freebsd ~x86-freebsd ~x86-interix ~amd64-linux ~arm-linux ~ia64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris
-RDEPEND=|| ( =dev-lang/perl-5.20* =dev-lang/perl-5.18* ~perl-core/Digest-1.170.0 ) !<perl-core/Digest-1.170.0 !>perl-core/Digest-1.170.0-r999
+RDEPEND=|| ( =dev-lang/perl-5.22* =dev-lang/perl-5.20* ~perl-core/Digest-1.170.0 ) !<perl-core/Digest-1.170.0 !>perl-core/Digest-1.170.0-r999
 SLOT=0
-_md5_=3ed4d388ebc4edc15e8dc0874c6c49f3
+_md5_=305f3dd70543f20ee9810e5c8e3bb1bd
