@@ -1,23 +1,25 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-EBUILD perl-Digest-1.170.0-r4.ebuild 793 SHA256 b652820ba520a0d3757585067c938d5c5912247602de29558b462057ed8e4c9b SHA512 bef57363b36cc46b61e722c81ebda406f7126db98b7d970037c2e98c6f040f7fb64f609afc72e73020f6b8d85cd6fa9a4aec67e6add2b5acae95a6628f427683 WHIRLPOOL afb64182e577c2aede0ddb18522b8e5994d7fdb3c6b9892a3feba7a01ada0a0a367a38f264f8239100895295debbcb08f4d239ff923dd063d47fd83311ef2c75
-MISC ChangeLog 8193 SHA256 67bb4d88790d306884f819cd65772afc5579f17b0738ca4b39eecbb801f8e4d8 SHA512 a7856319f3ae9e33b0b8872ebea5d9008e2d62a8b9a4af283aaefd2ff35190bcd284f2ccf3f161a048c85c2a0a1da620b84faad939ba7baa1295e30e898a63c7 WHIRLPOOL 87aeb2d64f19ea8d351127d7458ae9ebfdfd42f182fdf58d5d0b43a269fa64da1327465d5f7f413883a5151b257efac4c86769f39083803d428d64f1088b01f2
+EBUILD perl-Digest-1.170.0-r5.ebuild 793 SHA256 b0ca92bb0fd59159ac2dad800a0b6a0c3d7291819beb6949365ae5aab1e92ab0 SHA512 66648b4ecb2dbc675c9c0e64f4f9a63ff4b7ef0fd92ce84f3ee4aa344f2156d3f6d08501b2564717172e8e846d05df317caee32503b5d55155aa5077f2679144 WHIRLPOOL f335cb017c4cc43bd5efbe5720c7230d007141fc9fe7a2c9b9ea432b152aee31be052fb6453729b20acbe076b7dfaff98a043c870dd4eedda52b18cdea4e29d9
+MISC ChangeLog 8384 SHA256 3edfd775ed5a97d59117d0820513b694eff4bcc058b6e3353f4848a41c7ae88c SHA512 f766a545a29db6077ba6de73544c1da3da8814d57a98ce6bda600a7ec414a47df5c00cff1220453aa5206690ecb7d9c9c443f308e6ea9c693cdbe6a2145899d8 WHIRLPOOL 801ab96de76496cbee3523f2c768b26133d9413cd9aadae2e6fb114730e3f3e2f5d32063e44bfd5ff3180913b1e4defe629eb24245b78fbb183ad14ef7857894
 MISC metadata.xml 159 SHA256 9e7c719a784bb48388c9a12217b85baa75f1b04e9bf049d74b740785fa5006dd SHA512 5ff7b5593ea8976b44c7d63c7cd649f56d649b0d7c4fa5a16bf71ecdf36e40afa8fd9c28df0b8f0c7f9577c47b6ee63d3330f9304d545b46657d6a5f2bfa124a WHIRLPOOL 7ca7b971bad6145bdf2215f73d158f190984644554e8f32132c57c22f1209a5684060661c02e181c135c34c8729d491090ff6d4b23614198e19b9e2deda35a0a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iQIcBAEBCAAGBQJUXjHpAAoJEJS/30SErRQvSa0P/0yREPDZceey+x7zO3AnyRhS
-5RC5OIE0GOiSkPZNT/+YxZw179UVsz7vuRJE7dhXyAw9jMyhLJhmiBrGZbjTiVyz
-MmPV0yTVaSCN+VFMG16s4Zh6fI9raTAslb5TEOXamX18jT7A1vQNxCVl1NkzvJ4k
-n8tG8WijxHD3tFKdfVmuFw+abjk4IDJ3qA9dpqCWV1HSU1k2eHU5Dp7wgUH1Ehse
-Tprc1qFvVbkpPVLoygqRMY9oNfiPXVVZ94p89Y9YYDN/bgvw+uIbDhzr2dsewDOd
-xQltnEVoEqBQAevw4E981sKSkxJL5dPDFtHMiz6l5/ANPIDMmk9pHxMk94pjKo0z
-ObTN63BywidU8jAMItAmwuDNVDmkJXKhagTXhm3f+7XurO/SCxkeF2wH0PPzI9O5
-qsSgB3OKF2JI6uouARuEIhYbbnZDd5D7uLu4jrM7QegwKKfD/OuRrViZZTnuH7p2
-4K87pC+mJqpkBN1QL1loAS/+mURy40VWIfaDCF7vKdH10ZA2Zy4kE07orHC7wNDO
-ccHlbyq77RHgOxMJE8kCrkctkMON+xA2QqwesKRUti7jT3MkNiSaPvv5509mQl6f
-FWT1Q4CQwVa4ZjyyM4Yuf1PRulGWUMDbRFfi/uXp8kFmWUqBnNA0n9EShbiOgAWP
-3M9mxMZPral3vMti53kQ
-=vc8T
+iQJ8BAEBCABmBQJVcMXsXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0RkJDMzI0NjNBOTIwMDY5MTQ2NkMzNDBF
+MTM4NkZEN0VGNEI1Nzc5AAoJEOE4b9fvS1d53nUP+wc1lE/OV32Z1Ed8kOEP3SXS
+BVsYJOrqzf0LodN8T/ghkDccoiu7wa39ar4Ueb8NpEQS0Sgqom16dp2gpgGh9QHZ
+LUCMc0nWNg9l4P2RWNTxM807wPEPgG1byMER+YmCCXPNDaFNDT29C8aLywXhmAmT
+/NOgRKE7dlcioja5yFF+x8BUv24fQRAMij0wcAFu38szB7xovnhauaIyeAznYgK6
+C+E1CioWFZmx5gx1qHCn8iC/nOo41jgVudOjtRYKVO1nKgR+Utz20MeM6LCIdeh9
+OQnaRnE48KsWC57HtpZ+3GJFshje7pt50vfAOEEFHjKAfD/7m8CFKkUlYoad15rX
+tDRDVMyK6cMoEm0cbsYenQGf1h6wdvrqgAMX4bhrhcpX/a/O4FzPiEQ3pjY1blVZ
+8z2pWyZwg4GBdXQzlFuukbp8uPAxQyxjDhPw7smEki4wXt3rpa3C7jb5qNn/mqPy
+ZC5EdyM3Gzw2Z+glllwWVlVKdwyekYqe82dJIC5Gsvt1j2/pFYQ5oXPZR1lxluSl
+wozgOwJCJd3leH9/VdRguv9tpz9MziWEkBsgR5jGOmeDPr1o+lSHYTKyHn1Hle70
+vEP+1YNGbIKqKULyTiIdgGvHf7ALBkd0Mq5SrERjvI50uIYVTsw38K6AOsVYtVln
+TU1Cl/xx+0en3sqzy5kE
+=SaVa
 -----END PGP SIGNATURE-----
