@@ -1,6 +1,12 @@
 # ChangeLog for virtual/perl-Digest
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Digest/ChangeLog,v 1.3 2014/11/08 15:07:38 dilfridge Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Digest/ChangeLog,v 1.4 2015/06/04 21:40:59 dilfridge Exp $
+
+*perl-Digest-1.170.0-r5 (04 Jun 2015)
+
+  04 Jun 2015; Andreas K. Huettel <dilfridge@gentoo.org>
+  -perl-Digest-1.170.0-r4.ebuild, +perl-Digest-1.170.0-r5.ebuild:
+  Add Perl 5.22 as provider
 
 *perl-Digest-1.170.0-r4 (08 Nov 2014)
 
